feat: update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -42,8 +42,51 @@
   <section>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-sm-12 col-md-6 col-lg-4 left-side"></div>
-        <div class="col-sm-12 col-md-6 col-lg-8 right-side"></div>
+        <div class="col-sm-12 col-md-6 col-lg-4 left-side home-bio white-blue">
+          <h2>Biography</h2>
+          <h3 class="uppercase"><i class="fas fa-user-alt"></i> Name:</h3>
+          <p>John Henry</p>
+          <h3><i class="fas fa-envelope"></i> Email:</h3>
+          <p>johnhenry@gmail.com</p>
+          <h3><i class="fab fa-github-square"></i> GitHub:</h3>
+          <p>johnhenry12</p>
+          <h3><i class="fas fa-home"></i> Address:</h3>
+          <p>123 Henry Street, Dublin 2, Ireland</p>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-8 right-side home-about light-blue">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-sm-12 col-md-12 col-lg-12 home-about-sect">
+                <h3><i class="fas fa-user-alt"></i> Who am I?</h3>
+                <p>
+                  I am a Junior Software Developer at Google and part-time free-lancer
+                  with a wealth of experience building full stack web applications.
+                  I pride myself in my user-centric and user-focused method of
+                  developing applications.
+                </p>
+              </div>
+              <div class="col-sm-12 col-md-12 col-lg-12 home-about-sect">
+                <h3><i class="fas fa-tv"></i> Technologies I use</h3>
+                <ul class="list-group">
+                  <li class="list-group-item light-blue">HTML</li>
+                  <li class="list-group-item light-blue">CSS</li>
+                  <li class="list-group-item light-blue">JavaScript (Angular, React)</li>
+                  <li class="list-group-item light-blue">Python (Django, Flask)</li>
+                  <li class="list-group-item light-blue">MongoDB</li>
+                </ul>
+              </div>
+              <div class="col-sm-12 col-md-12 col-lg-12 home-about-sect">
+                <h3><i class="far fa-file"></i> Examples</h3>
+                <div class="example">
+                  <a href="https://summersby95.github.io/ucd-resume-ci/" class="alert-link">Code Institute Resume Page</a>
+                </div>
+                <div class="example">
+                  <a href="https://summersby95.github.io/ci-hackathon-1/" class="alert-link">Code Institute Hackathon One Project</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
