--- a/about.html
+++ b/about.html
@@ -54,16 +54,21 @@
 
         <div class="col-sm-12 col-md-6 col-lg-8 right-side">
             <h1>Work Experience <i class="fas fa-briefcase"></i></h1>
-            <div class="projects">
-                <a href="https://www.google.ie/" target="_blank"><img src="/images/img-project1.png" alt="Google Homepage" width="35%" height="32%"></a>
-                <span><strong>Junior Software Developer</strong> - Google, Dublin (September 2018 – Present)</br>I’ve been working as part of the Google Development Team for the last three years. In this role I regularly work on Team Projects and have assisted with the development of apps relating to Search, Maps and other Google services.</span>
-                    
-            </div>
-            <div class="projects">
-                <a href="https://www.amazon.co.uk/" target="_blank"><img src="/images/img-project2.png" alt="Amazon Homepage" width="35%" height="32%"></a>
-                <span><strong> Software Developer Intern</strong> – Amazon, Dublin (June 2018 – September 2018) </br> I completed a three month internship wherein I assisted a Junior Developer with working on a project that Amazon were developing at this time. This role gave me a good level of experience while I was completing my Code Institute Course.</spans> 
-
-            </div>
+               <div class="row projects">
+                    <div class="col-md-4">
+                        <a href="https://www.google.ie/" target="_blank"><img src="/images/img-project1.png" alt="Google Homepage" class="img-fluid"></a>
+                    </div>
+                    <div class="col-md-8">
+                        <span><strong>Junior Software Developer</strong> - Google, Dublin (September 2018 – Present)</br>I’ve been working as part of the Google Development Team for the last three years. In this role I regularly work on Team Projects and have assisted with the development of apps relating to Search, Maps and other Google services.</span>
+                    </div>
+                
+                    <div class="col-md-4">
+                        <a href="https://www.amazon.co.uk/" target="_blank"><img src="/images/img-project2.png" alt="Amazon Homepage" class="img-fluid"></a>
+                    </div>
+                    <div class="col-md-8">
+                        <span><strong> Software Developer Intern</strong> – Amazon, Dublin (June 2018 – September 2018) </br> I completed a three month internship wherein I assisted a Junior Developer with working on a project that Amazon were developing at this time. This role gave me a good level of experience while I was completing my Code Institute Course.</spans> 
+                    </div> 
+                </div> 
 
         </div>
       </div>
