--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg=="
         crossorigin="anonymous" />
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>John Henry - Software Developer</title>
 </head>
 
 <body>
