--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="https://kit.fontawesome.com/6a9c92e46f.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg==" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/style.css">
-  <title>Document</title>
+  <title>John Henry - Software Developer</title>
 </head>
 <body>
   <header>
